Horizontal scroll, corrections and buttons

--- a/style/modalUI.css
+++ b/style/modalUI.css
@@ -38,3 +38,9 @@
 	max-width: 4em;
 }
 
+.scorepane {
+		position: absolute;
+		top: 5em;
+		padding-top: 1em;
+		height: calc(100vu-5em);
+}
